# LaNoLem

./: .env  .gitignore  Demo.ipynb  README.md  TSlib  _Forecast.py  _Latent.py  _SI.py  _SI_sindy.py  dataset  forecast.sh  gurobi.env  latent.sh  pyproject.toml  requirements.txt  result_view.ipynb  si_evaluate.sh  tools
data/googletrends/: outdoor.csv  outdoor_7.csv
model/: Dysts_dataset.py  __init__.py  kf.py  lds.py  make_data.py  make_plot.py  nlds.py  nlds_imp.py  proximal_gradient.py  tool.py  utils.py
result_re/forecast/mocap_21_01/: ERR_full  RSH_0  RSH_1  Snaps.mat  TIME_full  VfH_0  VfH_1  Vf_full  X  XH_0  XH_1
settings/: format.yaml
settings/SI/: cubic.yaml  halvorsen.yaml  hopf.yaml  rucklidge.yaml  vanderpol.yaml
src/: Dysts_dataset.py  __init__.py  make_data.py  model.py  nlds_imp.py  proximal_gradient.py  rlds.py  utils.py
test/: ._table_exp_5.tex  table.tex  table_exp_10.tex  table_exp_25.tex  table_exp_5.tex  table_exp_50.tex
