[tool.poetry]
name = "NLDS-Eq"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numba = "^0.59.1"
notebook = "^7.1.2"
seaborn = "^0.13.2"
scikit-learn = "^1.4.2"
gurobipy = "^11.0.1"
lmfit = "^1.3.0"
tqdm = "^4.66.4"
itertools-len = "^1.2"
pysindy = "^1.7.5"
setuptools = "^69.5.1"
scipy = "1.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
