[tool.poetry]
name = "lanolem"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.11.9"
notebook = "^7.2.0"
numpy = "1.24.3"
dysts = "^0.8"
numba = "^0.59.1"
pysindy = "1.7.5"
sympy = "^1.12"
gurobipy = "^11.0.2"
lmfit = "^1.3.1"
itertools-len = "^1.2"
tqdm = "^4.66.4"
seaborn = "^0.13.2"
setuptools = "69.5.1"
pykalman = "^0.9.7"
autograd = "^1.6.2"
networkx = "^3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
